--- a/HW4/HW4_JBoecher_Resubmission.ipynb
+++ b/HW4/HW4_JBoecher_Resubmission.ipynb
@@ -1452,6 +1452,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# FBB REVISIONS WERE VERY GIID - just a few comments below"
+      ],
+      "metadata": {
+        "id": "idMgMqJWDG6U"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "IXxbDqi7nrAd"
       },
@@ -1482,7 +1491,7 @@
         "id": "EQ2r2aY_xUK9",
         "outputId": "a0770aa5-6ac1-4c60-ce0c-adb3cfcdf51d"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1514,7 +1523,7 @@
         "from wwo_hist import retrieve_hist_data\n",
         "%pylab inline"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1561,7 +1570,7 @@
       "source": [
         "!pip install fbprophet\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1606,7 +1615,7 @@
       "source": [
         "import fbprophet"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1622,7 +1631,7 @@
         "from fbprophet import Prophet\n",
         "from fbprophet import diagnostics"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1656,7 +1665,7 @@
         "    uberrides_mon = pd.read_csv(f\"https://raw.githubusercontent.com/fivethirtyeight/uber-tlc-foil-response/master/uber-trip-data/uber-raw-data-{mon}14.csv\")\n",
         "    uberrides = pd.concat([uberrides_mon, uberrides], ignore_index=True) "
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1675,7 +1684,7 @@
       "source": [
         "print(uberrides)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1735,7 +1744,7 @@
         "id": "KeINUp1YJhRf",
         "outputId": "35f67df7-84cf-4943-8256-1458b8fb322a"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1772,7 +1781,7 @@
       "source": [
         "uberrides[\"time\"] = pd.to_datetime(uberrides[\"Date/Time\"])"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1789,7 +1798,7 @@
         "uberbyday = uberrides.groupby([uberrides[\"time\"].dt.date]).count()\n",
         "uberbyday.tail()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1975,7 +1984,7 @@
       "metadata": {
         "id": "o7rknle68Byy"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1986,7 +1995,7 @@
       "metadata": {
         "id": "5S-0MBIcnhZI"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1997,7 +2006,7 @@
       "metadata": {
         "id": "dcSHUcyCncp4"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2011,7 +2020,7 @@
       "metadata": {
         "id": "703CQK9rm7uB"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2036,7 +2045,7 @@
         "plt.legend([\"# uber-rides\"])\n",
         "plt.show()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2088,7 +2097,7 @@
       "metadata": {
         "id": "7gCI-NBAoQZa"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2109,7 +2118,7 @@
         "plt.legend([\"# uber-rides (standardized)\"])\n",
         "plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2172,7 +2181,7 @@
         "simplem = Prophet()\n",
         "simplem.fit(uberbyday)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2209,7 +2218,7 @@
         "id": "uTr51QwgsHzy",
         "outputId": "bf14b776-9208-436d-cfbd-dd3e638b5baa"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2385,7 +2394,7 @@
         "id": "_XDtYpeisfCJ",
         "outputId": "9f8145e1-80b9-4515-8926-854f36b3aa3f"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2583,7 +2592,7 @@
         "fig1 = simplem.plot(forecast)\n",
         "pl.plot(uberbyday.ds, uberbyday.y, '--')"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2637,7 +2646,7 @@
       "source": [
         "fig2 = simplem.plot_components(forecast)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2689,7 +2698,7 @@
       "source": [
         "diagnostics.cross_validation?"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2728,7 +2737,7 @@
         "cvresult_simplem = diagnostics.cross_validation(simplem, horizon = '30 days')\n",
         "print(cvresult_simplem)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2785,7 +2794,7 @@
         "id": "-4dfynwAhCPy",
         "outputId": "65e9243d-23c6-47df-9baa-d0bd2528965d"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2845,7 +2854,7 @@
       "source": [
         "!pip install wwo_hist"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2870,7 +2879,7 @@
         "\n",
         "drive.mount(\"/content/gdrive\")\n"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2893,7 +2902,7 @@
       "source": [
         "cd gdrive/MyDrive/ColabNotebooks"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2927,7 +2936,7 @@
         "                                location_label = False,\n",
         "                                export_csv = True)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2973,7 +2982,7 @@
         "tempC = weather.tempC\n",
         "precipMM = weather.precipMM"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2989,7 +2998,7 @@
         "id": "qNnKpAoSpHd9",
         "outputId": "6558398d-aa8d-4772-8983-28865876ebef"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3198,7 +3207,7 @@
         "uberweather = uberweather.join(weather.precipMM)\n",
         "uberweather            "
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3422,7 +3431,7 @@
       "metadata": {
         "id": "65e43E-OsCQ1"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3439,7 +3448,7 @@
         "#leave\n",
         "uberweather"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3674,7 +3683,7 @@
         "uberweather.plot(x = \"ds\", y=\"tempC\", ax=ax[1], xlabel = \"days\")\n",
         "uberweather.plot(x = \"ds\", y=\"precipMM\", ax=ax[2],  xlabel = \"days\");"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3736,7 +3745,7 @@
         "regrm.add_regressor('tempC')\n",
         "regrm.add_regressor('precipMM')"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3766,7 +3775,7 @@
       "source": [
         "regrm.fit(uberweather)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3808,7 +3817,7 @@
         "nowcast = regrm.predict(uberweather)\n",
         "regrm.plot(nowcast, xlabel = \"date\", ylabel = \"observed and estimated number of uber-rides (standardized)\");"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3869,7 +3878,7 @@
       "source": [
         "cvresult_regrm = diagnostics.cross_validation(regrm, horizon = '30 days')"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3906,7 +3915,7 @@
       "source": [
         "rchi2(cvresult_regrm[\"yhat\"],cvresult_regrm[\"y\"])"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3965,7 +3974,7 @@
         "regholm = Prophet()\n",
         "regholm.add_country_holidays(country_name = \"US\")"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3991,7 +4000,7 @@
         "id": "IiTPgP9mLK9v",
         "outputId": "fe540b59-7a60-4119-9011-b33f99565e61"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4035,7 +4044,7 @@
         "nowcast = regholm.predict(uberweather)\n",
         "regholm.plot(nowcast, xlabel = \"date\", ylabel = \"observed and estimated number of uber-rides (standardized)\");"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4106,7 +4115,7 @@
         "id": "QAL5lwrTMoI8",
         "outputId": "a956aa7e-bcda-4187-a83a-289c6d943cae"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4143,7 +4152,7 @@
       "source": [
         "rchi2(cvresult_regholm[\"yhat\"],cvresult_regholm[\"y\"])"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4188,7 +4197,7 @@
       "source": [
         "regmcmc = Prophet(mcmc_samples=5000)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4203,7 +4212,7 @@
         "id": "QDqs-JsJOPtt",
         "outputId": "2533d231-9900-4a5f-c27f-45b0677c59cb"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4245,7 +4254,7 @@
         "id": "2Q-7nBVgOpO2",
         "outputId": "fb5ba9ab-2dee-4383-8ab1-ffbdb1e28279"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4326,7 +4335,7 @@
         "id": "Yj7Is8KmUAZ9",
         "outputId": "3739bf2f-69e2-454d-8ffe-3876c5fc3cc9"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4366,7 +4375,7 @@
       "source": [
         "rchi2(cvresult_regmcmc[\"yhat\"],cvresult_regmcmc[\"y\"])"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
