--- a/Other/PercDeltaCoeff.ipynb
+++ b/Other/PercDeltaCoeff.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PercDeltaCoeff.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPBQCEcAAXAVTa4qXAVauzD",
+      "authorship_tag": "ABX9TyPDR0fhHRIOGqcxKT/R5k/P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4100,12 +4100,12 @@
         "df2[\"vowel\"][0]"
       ],
       "metadata": {
-        "id": "Uf2YzAWJYW6P",
-        "outputId": "55e36fdb-9eea-4d65-cf0d-aa0e1b24733f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "Uf2YzAWJYW6P",
+        "outputId": "55e36fdb-9eea-4d65-cf0d-aa0e1b24733f"
       },
       "execution_count": 49,
       "outputs": [
@@ -4144,12 +4144,12 @@
         "df2"
       ],
       "metadata": {
-        "id": "nfxvufNHXxHj",
-        "outputId": "a4b968da-b766-467a-87fc-cd432c8b89f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
-        }
+        },
+        "id": "nfxvufNHXxHj",
+        "outputId": "a4b968da-b766-467a-87fc-cd432c8b89f9"
       },
       "execution_count": 53,
       "outputs": [
@@ -5883,12 +5883,12 @@
         "newdf"
       ],
       "metadata": {
-        "id": "hDzh3HI7aDmD",
-        "outputId": "4b95e2f8-79be-436e-c83c-593505b2befc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "hDzh3HI7aDmD",
+        "outputId": "4b95e2f8-79be-436e-c83c-593505b2befc"
       },
       "execution_count": 90,
       "outputs": [
@@ -7253,12 +7253,12 @@
         "newdf"
       ],
       "metadata": {
-        "id": "pdO8WVCBbUkV",
-        "outputId": "12151d4a-f158-455f-bf50-de2970350521",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "pdO8WVCBbUkV",
+        "outputId": "12151d4a-f158-455f-bf50-de2970350521"
       },
       "execution_count": 101,
       "outputs": [
@@ -7898,6 +7898,51 @@
           },
           "metadata": {},
           "execution_count": 101
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Get Average Values per Column**"
+      ],
+      "metadata": {
+        "id": "7xKwWrsPcLUd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "newdf.mean()"
+      ],
+      "metadata": {
+        "id": "KcHBJdvpcUNs",
+        "outputId": "228ebad9-2147-4071-fdc7-3bdae442de27",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "BG            17.500000\n",
+              "VDuration      0.891676\n",
+              "VCDuration     2.201176\n",
+              "PrecV          0.398355\n",
+              "DeltaV         0.054955\n",
+              "DeltaC         0.051870\n",
+              "AvgV           0.095320\n",
+              "AvgC           0.091862\n",
+              "CoeffV         0.579721\n",
+              "CoeffC         0.563323\n",
+              "dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 103
         }
       ]
     }
