--- a/Other/3_Match_MLU.ipynb
+++ b/Other/3_Match_MLU.ipynb
@@ -6,7 +6,7 @@
       "name": "3. Match_MLU.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPAJYWOzVusKBVzImRmydOX",
+      "authorship_tag": "ABX9TyMH/9bTv3DUYWBVvP/VpP4U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OjhQ3dDP-KVJ",
-        "outputId": "5aa0a6e6-bd9d-42ef-c63e-94f5dd209146"
+        "outputId": "95adf660-cfe8-42ea-e6df-5c0a3417dbde"
       },
       "execution_count": 2,
       "outputs": [
@@ -72,7 +72,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/gdrive\n"
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
           ]
         }
       ]
@@ -87,7 +87,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BTr2gWXQ-Mob",
-        "outputId": "603d2a48-0806-4bf8-d053-ec85fd4529cc"
+        "outputId": "6d1a6df7-0b06-4469-cae1-14b8dbde9277"
       },
       "execution_count": 3,
       "outputs": [
@@ -109,7 +109,7 @@
       "metadata": {
         "id": "auwA6jOU-MhK"
       },
-      "execution_count": 35,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -184,7 +184,7 @@
       "metadata": {
         "id": "5bEE4RA0-fhj"
       },
-      "execution_count": 100,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -370,14 +370,18 @@
       "cell_type": "code",
       "source": [
         "def compare_groups(df_vowels, df_consonants):\n",
-        "  comparison_v = df_vowels.groupby(\"Group\").mean()\n",
-        "  control_v = comparison_v[\"Syllables\"][0]\n",
-        "  pws_v = comparison_v[\"Syllables\"][1]\n",
+        "  #comparison_v = df_vowels.groupby(\"Group\").mean()\n",
+        "  #control_v = comparison_v[\"Syllables\"][0]\n",
+        "  #pws_v = comparison_v[\"Syllables\"][1]\n",
+        "  control_v = (df_vowels.groupby(\"ID\").mean()[\"Syllables\"][18:30]).mean()\n",
+        "  pws_v = (df_vowels.groupby(\"ID\").mean()[\"Syllables\"][0:18]).mean()\n",
         "  difference_v = control_v - pws_v\n",
         "\n",
-        "  comparison_c = df_consonants.groupby(\"Group\").mean()\n",
-        "  control_c = comparison_c[\"Consonants\"][0]\n",
-        "  pws_c = comparison_c[\"Consonants\"][1]\n",
+        "  #comparison_c = df_consonants.groupby(\"Group\").mean()\n",
+        "  #control_c = comparison_c[\"Consonants\"][0]\n",
+        "  #pws_c = comparison_c[\"Consonants\"][1]\n",
+        "  control_c = (df_consonants.groupby(\"ID\").mean()[\"Consonants\"][18:30]).mean()\n",
+        "  pws_c = (df_consonants.groupby(\"ID\").mean()[\"Consonants\"][0:18]).mean()\n",
         "  difference_c = control_c - pws_c\n",
         "\n",
         "  string1 = (f\"PWS produced on average {round(pws_v,2)} syllables per utterance, while control participants produced {round(control_v,2)} syllables on average.\")\n",
@@ -390,7 +394,7 @@
       "metadata": {
         "id": "a9ZYa7rp_ZKl"
       },
-      "execution_count": 13,
+      "execution_count": 137,
       "outputs": []
     },
     {
@@ -406,7 +410,7 @@
       "cell_type": "code",
       "source": [
         "def match_vowels(df_vowels, pws_v, cut_v):\n",
-        "  cut_v = round(cut_v)\n",
+        "  cut_v = round(cut_v) + 5                                                         ################## number chosen because \"it works well\". No real motivation. Come up with strategy! ############\n",
         "  syll_col_matched = pd.DataFrame()  ## initialize group-level dataframe\n",
         "  participant = pd.DataFrame()  ## initialize participant-level dataframe\n",
         "  df_control = df_vowels[df_vowels[\"Group\"]  == \"Control\"] \n",
@@ -430,7 +434,7 @@
       "metadata": {
         "id": "uoetWRx4_jWh"
       },
-      "execution_count": 106,
+      "execution_count": 165,
       "outputs": []
     },
     {
@@ -446,7 +450,7 @@
       "cell_type": "code",
       "source": [
         "def match_consonants(df_consonants, pws_c, cut_c):\n",
-        "  cut_c = round(cut_c)\n",
+        "  cut_c = round(cut_c) + 4                                                        ################## number chosen because \"it works well\". No real motivation. Come up with strategy! ############\n",
         "  cons_col_matched = pd.DataFrame()  ## initialize group-level dataframe\n",
         "  participant = pd.DataFrame()  ## initialize participant-level dataframe\n",
         "  df_control = df_consonants[df_consonants[\"Group\"]  == \"Control\"] \n",
@@ -469,7 +473,7 @@
       "metadata": {
         "id": "2dxTzRVg_q2P"
       },
-      "execution_count": 122,
+      "execution_count": 174,
       "outputs": []
     },
     {
@@ -507,7 +511,7 @@
       "metadata": {
         "id": "Qpkmbv1dA48L"
       },
-      "execution_count": 138,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -545,7 +549,7 @@
       "metadata": {
         "id": "kOkbDbKdAIrv"
       },
-      "execution_count": 139,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -567,7 +571,7 @@
       "metadata": {
         "id": "5Wy0bBQKB9bJ"
       },
-      "execution_count": 36,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -582,7 +586,7 @@
       "metadata": {
         "id": "WoVGC2FECtmO"
       },
-      "execution_count": 41,
+      "execution_count": 182,
       "outputs": []
     },
     {
@@ -597,7 +601,7 @@
       "metadata": {
         "id": "8Qlw9EVdCva6"
       },
-      "execution_count": 47,
+      "execution_count": 183,
       "outputs": []
     },
     {
@@ -610,7 +614,7 @@
       "metadata": {
         "id": "3KtyX_nPCy8X"
       },
-      "execution_count": 51,
+      "execution_count": 184,
       "outputs": []
     },
     {
@@ -623,7 +627,7 @@
       "metadata": {
         "id": "rXQnEwfrC6wn"
       },
-      "execution_count": 54,
+      "execution_count": 185,
       "outputs": []
     },
     {
@@ -643,9 +647,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6L2XWvlnC-8_",
-        "outputId": "7622f209-63fe-42a8-a8c1-8504f093ccd5"
+        "outputId": "8fbe8b45-47d0-48b8-d742-fa6f0772f9c6"
       },
-      "execution_count": 57,
+      "execution_count": 186,
       "outputs": [
         {
           "output_type": "stream",
@@ -677,9 +681,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j8Ace-XrICeI",
-        "outputId": "5325579b-6fc3-47e8-f504-076aec71a29e"
+        "outputId": "e0628a69-f08a-4e96-8a96-303170747056"
       },
-      "execution_count": 103,
+      "execution_count": 187,
       "outputs": [
         {
           "output_type": "stream",
@@ -704,7 +708,7 @@
       "metadata": {
         "id": "rH720-ZrDDZy"
       },
-      "execution_count": 59,
+      "execution_count": 188,
       "outputs": []
     },
     {
@@ -717,7 +721,7 @@
       "metadata": {
         "id": "wxoyPxDiDS9K"
       },
-      "execution_count": 75,
+      "execution_count": 189,
       "outputs": []
     },
     {
@@ -732,7 +736,7 @@
       "metadata": {
         "id": "q8oVGoIbDWsl"
       },
-      "execution_count": 71,
+      "execution_count": 190,
       "outputs": []
     },
     {
@@ -751,7 +755,7 @@
       "metadata": {
         "id": "73nTBNgTDXiK"
       },
-      "execution_count": 119,
+      "execution_count": 191,
       "outputs": []
     },
     {
@@ -766,7 +770,7 @@
       "metadata": {
         "id": "sRXtgmpoDfxo"
       },
-      "execution_count": 124,
+      "execution_count": 192,
       "outputs": []
     },
     {
@@ -785,7 +789,7 @@
       "metadata": {
         "id": "4tPGFLpiDlGG"
       },
-      "execution_count": 125,
+      "execution_count": 193,
       "outputs": []
     },
     {
@@ -804,19 +808,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QoDZPrQHF24-",
-        "outputId": "23caf57c-bfcf-4fdf-f890-c7f0df41f848"
+        "outputId": "d241d7aa-0376-48f5-c56a-431080705b7e"
       },
-      "execution_count": 126,
+      "execution_count": 194,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "PWS produced on average 7.87 syllables per utterance, while control participants produced 9.94 syllables on average.\n",
-            "This means that on average control participants produced 2.07 syllables more per utterance.\n",
+            "PWS produced on average 7.87 syllables per utterance, while control participants produced 8.19 syllables on average.\n",
+            "This means that on average control participants produced 0.32 syllables more per utterance.\n",
             "\n",
-            "PWS produced on average 11.59 consonants per utterance, while control participants produced 14.91 consonants on average.\n",
-            "This means that on average control participants produced 3.32 consonants more per utterance.\n"
+            "PWS produced on average 11.59 consonants per utterance, while control participants produced 13.79 consonants on average.\n",
+            "This means that on average control participants produced 2.2 consonants more per utterance.\n"
           ]
         }
       ]
@@ -835,19 +839,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HdN7rC0OgV5-",
-        "outputId": "82ec504e-4798-4aac-e2f8-6d8da6ffcaf6"
+        "outputId": "4ebd1528-a0c1-4c92-be7d-2806137d607b"
       },
-      "execution_count": 131,
+      "execution_count": 195,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "PWS produced on average 8.54 syllables per utterance, while control participants produced 10.33 syllables on average.\n",
-            "This means that on average control participants produced 1.79 syllables more per utterance.\n",
+            "PWS produced on average 8.54 syllables per utterance, while control participants produced 8.56 syllables on average.\n",
+            "This means that on average control participants produced 0.02 syllables more per utterance.\n",
             "\n",
-            "PWS produced on average 13.13 consonants per utterance, while control participants produced 16.71 consonants on average.\n",
-            "This means that on average control participants produced 3.58 consonants more per utterance.\n"
+            "PWS produced on average 13.13 consonants per utterance, while control participants produced 14.7 consonants on average.\n",
+            "This means that on average control participants produced 1.57 consonants more per utterance.\n"
           ]
         }
       ]
@@ -864,17 +868,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ilqOeJnsGEbp",
-        "outputId": "726f7898-a3f8-4141-f427-90cb397df383"
+        "outputId": "222c3d07-a510-4096-8d39-cc9531fa30ea"
       },
-      "execution_count": 129,
+      "execution_count": 196,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Control utterances that were longer than the mean average length of PWS utterances, were shortened by 2 vowels. \n",
-            "After matching, PWS had 7.87 vowels per utterance, while control participants had 9.94 per utterance. \n",
-            "The difference is reduced to 2.07, which is statistically significant (p = 0.02).\n"
+            "Control utterances that were longer than the mean average length of PWS utterances were shortened. \n",
+            "After matching, PWS had 7.87 vowels per utterance, while control participants had 8.19 per utterance. \n",
+            "The difference is reduced to 0.32, which is statistically insignificant (p = 0.71).\n"
           ]
         }
       ]
@@ -890,17 +894,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tagTdgUzghPb",
-        "outputId": "80d2f609-dee0-466f-ea3f-8d753b1ef07a"
+        "outputId": "b19eafec-1050-46ef-825d-c6e6d0ca93f1"
       },
-      "execution_count": 137,
+      "execution_count": 197,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Control utterances that were longer than the mean average length of PWS utterances, were shortened by 2 vowels. \n",
-            "After matching, PWS had 8.54 vowels per utterance, while control participants had 10.33 per utterance. \n",
-            "The difference is reduced to 1.79, which is statistically significant (p = 0.0).\n"
+            "Control utterances that were longer than the mean average length of PWS utterances were shortened. \n",
+            "After matching, PWS had 8.54 vowels per utterance, while control participants had 8.56 per utterance. \n",
+            "The difference is reduced to 0.02, which is statistically insignificant (p = 0.97).\n"
           ]
         }
       ]
@@ -917,17 +921,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xu1kM6W6ZKR1",
-        "outputId": "fb472ec2-ef8c-4464-8d17-faa2822b38cd"
+        "outputId": "19440589-a8a6-437c-ad99-3fb0a027240b"
       },
-      "execution_count": 141,
+      "execution_count": 198,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Control utterances that were longer than the mean average length of PWS utterances, were shortened by 3 consonants. \n",
-            "After matching, PWS had 11.59 consonants per utterance, while control participants had 14.91 per utterance. \n",
-            "The difference is reduced to 3.32, which is statistically significant (p = 0.03).\n"
+            "Control utterances that were longer than the mean average length of PWS utterances, were shortened by 2 consonants. \n",
+            "After matching, PWS had 11.59 consonants per utterance, while control participants had 13.79 per utterance. \n",
+            "The difference is reduced to 2.2, which is statistically insignificant (p = 0.12).\n"
           ]
         }
       ]
@@ -943,17 +947,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GwNl3RnehBfT",
-        "outputId": "54d0a28f-af49-476b-dd12-6279dda113e1"
+        "outputId": "518dcd14-f846-4c7d-c95b-cd747946fb5a"
       },
-      "execution_count": 142,
+      "execution_count": 199,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Control utterances that were longer than the mean average length of PWS utterances, were shortened by 4 consonants. \n",
-            "After matching, PWS had 13.13 consonants per utterance, while control participants had 16.71 per utterance. \n",
-            "The difference is reduced to 3.58, which is statistically significant (p = 0.0).\n"
+            "Control utterances that were longer than the mean average length of PWS utterances, were shortened by 2 consonants. \n",
+            "After matching, PWS had 13.13 consonants per utterance, while control participants had 14.7 per utterance. \n",
+            "The difference is reduced to 1.57, which is statistically insignificant (p = 0.16).\n"
           ]
         }
       ]
@@ -987,7 +991,7 @@
       "metadata": {
         "id": "TluS962eXBXf"
       },
-      "execution_count": 160,
+      "execution_count": 200,
       "outputs": []
     },
     {
@@ -1001,7 +1005,7 @@
       "metadata": {
         "id": "xKGxiIw3XBQf"
       },
-      "execution_count": 161,
+      "execution_count": 201,
       "outputs": []
     },
     {
@@ -1015,7 +1019,7 @@
       "metadata": {
         "id": "cBHrZXjRUn-q"
       },
-      "execution_count": 150,
+      "execution_count": 202,
       "outputs": []
     },
     {
@@ -1029,7 +1033,7 @@
       "metadata": {
         "id": "jZ1AjImjWvYo"
       },
-      "execution_count": 154,
+      "execution_count": 203,
       "outputs": []
     },
     {
@@ -1051,9 +1055,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hUpmq0dfXrec",
-        "outputId": "49ebaeed-75b7-4326-e311-e25f03da602d"
+        "outputId": "fcdef0ff-7eba-40e8-b3f5-15c173cc6666"
       },
-      "execution_count": 162,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -1075,7 +1079,7 @@
       "metadata": {
         "id": "jwD2ACK5XrW8"
       },
-      "execution_count": 163,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -1088,9 +1092,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l0-KpCC9XrTV",
-        "outputId": "de512487-81b9-402e-b5e2-f612f217fd93"
+        "outputId": "1262063f-0e6c-462e-9dd0-e4eb4a16c4ea"
       },
-      "execution_count": 164,
+      "execution_count": 204,
       "outputs": [
         {
           "output_type": "stream",
@@ -1112,7 +1116,7 @@
       "metadata": {
         "id": "-EXbZpb6XrPf"
       },
-      "execution_count": 165,
+      "execution_count": 205,
       "outputs": []
     },
     {
@@ -1125,9 +1129,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RKJAanosXrIv",
-        "outputId": "2d9dd6f6-156b-4093-de62-dfd5adc1a1d4"
+        "outputId": "d732377e-2c7c-4def-9136-3d482e8897a2"
       },
-      "execution_count": 166,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
