--- a/Other/4. Compute_RhythmMetrics.ipynb
+++ b/Other/4. Compute_RhythmMetrics.ipynb
@@ -6,7 +6,7 @@
       "name": "4. Compute_RhythmMetrics.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOdTDAmJvUyioq1u7ZeXy4k",
+      "authorship_tag": "ABX9TyPP2TPzY4JnbSOo6YNV8Ktr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -160,24 +160,23 @@
         "if os.path.exists(dir) == False:\n",
         "  os.mkdir(dir)\n",
         "\n",
-        "%cd /content/gdrive/MyDrive/RhythmAnalysisPipeline/4.MetricsResult/"
+        "%cd /content/gdrive/MyDrive/RhythmAnalysisPipeline/4.MetricsResults/"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ydrih3Yn5bDR",
-        "outputId": "8cb4016c-a785-4cb6-e774-612a9e0ab2c0"
+        "outputId": "00b9927c-16db-4b75-ff75-5ee853e5486d"
       },
-      "execution_count": 8,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "/content/gdrive/MyDrive/RhythmAnalysisPipeline\n",
-            "[Errno 2] No such file or directory: '/content/gdrive/MyDrive/RhythmAnalysisPipeline/4.MetricsResult/'\n",
-            "/content/gdrive/MyDrive/RhythmAnalysisPipeline\n"
+            "/content/gdrive/MyDrive/RhythmAnalysisPipeline/4.MetricsResults\n"
           ]
         }
       ]
